--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: com.electron.app
-productName: calendar-cloner
+productName: CustomCal
 directories:
   buildResources: build
 files:
@@ -12,7 +12,7 @@ files:
 asarUnpack:
   - resources/**
 win:
-  executableName: calendar-cloner
+  executableName: CustomCal
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
